# godspeed-coding-agent

./: .bandit  .gitignore  .pre-commit-config.yaml  AUDIT_2026_04_27.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCS_AUDIT_2026_04_27.md  Dockerfile  GODSPEED.md.example  GODSPEED_ARCHITECTURE.md  MEMORY.md  Makefile  Modelfile.qwen36  README.md  ROADMAP.md  SECURITY.md  SESSION_SUMMARY.md  SIMPLIFICATION_AUDIT_2026_04_27.md  THREAT_MODEL.md  TUI_PLAN.md  _check.py  alerts.json  auto_fix.py  branch_protection.json  fix_alerts.py  godspeed.bat  parse_alerts.py  pyproject.toml  settings.yaml.example  show_alerts.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.godspeed/: settings.yaml
benchmarks/: BENCHMARK_PLAN.md  SOTA_AUDIT.md  tasks.jsonl
benchmarks/fixtures/: README.md
benchmarks/fixtures/easy-fix-syntax-01/: app.py  verify.py
benchmarks/fixtures/easy-git-status-01/: _setup.py
benchmarks/fixtures/easy-read-file-01/: main.py
benchmarks/fixtures/easy-run-tests-01/: test_smoke.py
benchmarks/fixtures/hard-cicd-01/: verify.py
benchmarks/fixtures/hard-feature-01/: app.py  verify.py
benchmarks/fixtures/hard-migration-01/: client.py  verify.py
docs/: AUDIT_RESPONSE.md  SPEED_OPTIMIZATIONS.md  adding_a_driver.md  demo.md  mcp-integration.md  permissions.md  prompt_caching.md  quickstart_windows.md  troubleshooting.md
experiments/: benchmark_report_competition_2026_05_01.md  benchmark_retry_validation.md  benchmark_shootout_2026_04.md
experiments/phase_a1/: NEXT_SESSION.md  README.md  __init__.py  anchor_opus.py  assemble.py  augment.py  blueprints.py  emit.py  executor.py  judge.py  narrator.py  orchestrate.py  providers.py  registry_builder.py  specs.py  swesmith_distill.py  validate.py
experiments/qwen3.6-smoke/: post_mortem.md  results.jsonl  stage_b_revised.md  summary.json
experiments/swebench_lite/: AGENT_IN_LOOP_DESIGN.md  analyze.py  apply_check.py  apply_check_5way.jsonl  baseline_2026_04_19.md  best_of_3_sources.jsonl  best_of_n.py  compare_runs.py  docker_test_tool.py  findings_2026_04_20.md  findings_2026_04_21.md  findings_v3_2_judge_selector.md  findings_v3_3_judge_research.md  generate_leaderboard_trajs.py  judge_gpt_oss_5way_sources.jsonl  judge_kimi_thinking_5way_sources.jsonl  judge_merged_5way_sources.jsonl  judge_qwen_5way_sources.jsonl  llm_judge_selector.py  meta_judge.py  meta_judge_picks.jsonl  meta_judge_qwen_picks.jsonl  oracle_merge.py  oracle_merged_5way_sources.jsonl  predictions_best_of_3.jsonl  predictions_e1_kimi.jsonl  predictions_gpt_oss.jsonl  predictions_iter1.jsonl  predictions_judge_gpt_oss_5way.jsonl  predictions_judge_kimi_thinking_5way.jsonl  predictions_judge_merged_5way.jsonl  predictions_judge_qwen_5way.jsonl  predictions_kimi_seed2.jsonl  predictions_kimi_stack.jsonl  predictions_kimi_thinking.jsonl  predictions_nemotron3_super.jsonl  predictions_oracle_merged_5way.jsonl  predictions_p1_dev23.jsonl  predictions_p1_dev23_clean.jsonl  predictions_p1_dev23_v3.jsonl  (+35 more)
scripts/: auto_evolver.py  benchmark_specdec.py  compare_benchmarks.py  fix_tui.py  minimalize_tui.py  optimize_windows_for_llm.py  run_benchmark.py  settings_local_deepswe_preview.yaml  settings_local_llm.yaml  settings_local_llm_qwen25_coder.yaml  setup_qwen36_local.py  smoke_test.py  start_draft_server.py  validate_driver.py
src/godspeed/: __init__.py  __main__.py  _bootstrap.py  cli.py  config.py
src/godspeed/agent/: architect.py  (+16 more)
tests/: conftest.py  test_adversarial.py  test_agent_coordinator.py  test_agent_loop.py  test_agent_result.py  test_apply_check.py  test_architect.py  test_audit_log_drift.py  test_auto_commit.py  test_auto_index.py  test_auto_permission.py  test_background.py  test_cheapest_compaction.py  test_cli_env_loading.py  test_cli_extra.py  test_cli_headless.py  test_cli_more.py  test_codebase_index.py  test_codebase_index_extra.py  test_commands_extra.py  test_commands_extra_new.py  test_compaction_stress.py  test_completions.py  test_complexity_tool.py  test_config.py  test_context.py  test_cost.py  test_cost_budget.py  test_coverage_tool.py  test_db_query.py  test_dep_audit_tool.py  test_diff_apply.py  test_doctor.py  test_events.py  test_evolution_orchestrator.py  test_file_move_extra.py  test_generate_leaderboard_trajs.py  test_generate_tests_tool.py  test_github.py  test_github_tool.py  (+69 more)
tests/test_audit/: test_redactor.py  test_trail.py
tests/test_context/: test_checkpoint.py  test_codebase_index.py  test_codebase_index_coverage.py  test_coherence_graph.py  test_coherence_graph_coverage.py  test_compaction.py  test_compaction_coverage.py  test_project_instructions.py  test_repo_map_coverage.py
tests/test_evolution/: test_applier.py  test_cross_session.py  test_fitness.py  test_hardware.py  test_mutator.py  test_permissions.py  test_registry.py  test_safety.py  test_skill_gen.py  test_trace_analyzer.py
tests/test_hooks/: test_config.py  test_executor.py
tests/test_mcp/: test_client.py  test_sse_transport.py  test_tool_adapter.py
tests/test_memory/: test_corrections.py  test_session.py  test_user_memory.py
tests/test_security/: test_approval_tracker.py  test_dangerous.py  test_permissions.py  test_secrets.py
tests/test_skills/: test_commands.py  test_dream.py  test_evolution.py  test_loader.py  test_security.py  test_wiki_bridge.py
tests/test_tools/: test_aliases.py  test_base.py  test_code_search.py  test_db_query.py  test_file_edit.py  test_file_move.py  test_file_read.py  test_file_write.py  test_git.py  test_github.py  test_glob_search.py  test_grep_search.py  test_llamacpp_manager.py  test_path_utils.py  test_registry.py  test_repo_map.py  test_shell.py  test_stock_price.py  test_tasks.py  test_tool_sets.py  test_traceback_analyzer.py  test_verify.py
tests/test_training/: test_benchmark.py  test_conversation_logger.py  test_exporter.py  test_rewards.py  test_session_end.py
(+255 files in other folders)
