[project]
name = "godspeed"
version = "2.3.0"
description = "Security-first open-source coding agent with parallel tool execution, multimodal input, 4-tier permissions, audit trails, and 200+ LLM provider support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tremayne Timms", email = "Ttimmsinternational@gmail.com" },
]
keywords = [
    "ai",
    "coding-agent",
    "llm",
    "security",
    "audit-trail",
    "cli",
    "developer-tools",
    "open-source",
    "litellm",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.60.0,<2.0",
    "pydantic>=2.12.5,<3.0",
    "pydantic-settings>=2.7.0,<3.0",
    "click>=8.1.0,<9.0",
    "rich>=14.3.3,<15.0",
    "prompt-toolkit>=3.0.0,<4.0",
    "tiktoken>=0.9.0,<1.0",
    "gitpython>=3.1.0,<4.0",
    "diff-match-patch>=20241021",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=5.0,<8.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "ruff>=0.4.0,<1.0",
    "mypy>=1.10.0,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "hypothesis>=6.151.12,<7.0",
    "pre-commit>=3.7.0,<5.0",
    "pip-audit>=2.10.0,<3.0",
    "bandit>=1.7.0,<2.0",
]
context = [
    "tree-sitter>=0.23.0,<1.0",
    "tree-sitter-language-pack>=0.5.0,<1.0",
    "grep-ast>=0.5.0,<1.0",
]
mcp = [
    "mcp>=1.27.0,<2.0",
]
index = [
    "chromadb>=1.0.0,<2.0",
]

[project.scripts]
godspeed = "godspeed.cli:main"

[project.urls]
Homepage = "https://github.com/omnipotence-eth/godspeed-coding-agent"
Repository = "https://github.com/omnipotence-eth/godspeed-coding-agent"
Issues = "https://github.com/omnipotence-eth/godspeed-coding-agent/issues"
Documentation = "https://github.com/omnipotence-eth/godspeed-coding-agent#readme"
Changelog = "https://github.com/omnipotence-eth/godspeed-coding-agent/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "S",    # flake8-bandit
    "T20",  # flake8-print
]
ignore = ["S603", "S607"]  # subprocess calls are intentional for a coding agent

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # assert and hardcoded passwords OK in tests
"src/godspeed/security/secrets.py" = ["S106"]  # secret_type= is a label, not a password

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/godspeed"]
branch = true
omit = [
    "src/godspeed/tui/*",
    "src/godspeed/cli.py",
    "src/godspeed/__main__.py",
    "src/godspeed/llm/client.py",
    "src/godspeed/context/compaction.py",
    "src/godspeed/agent/system_prompt.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
