[project]
name = "godspeed"
version = "3.4.0"
description = "Security-first open-source coding agent with parallel tool execution, multimodal input, 4-tier permissions, audit trails, and 200+ LLM provider support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Tremayne Timms", email = "Ttimmsinternational@gmail.com" },
]
keywords = [
    "ai",
    "coding-agent",
    "llm",
    "security",
    "audit-trail",
    "cli",
    "developer-tools",
    "open-source",
    "litellm",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "litellm>=1.83.7,<2.0",
    "pydantic>=2.12.5,<3.0",
    "pydantic-settings>=2.13.1,<3.0",
    "click>=8.3.3,<9.0",
    "rich>=15.0.0,<16.0",
    "textual>=2.0.0,<3.0",
    "prompt-toolkit>=3.0.52,<4.0",
    "tiktoken>=0.9.0,<1.0",
    "gitpython>=3.1.46,<4.0",
    "diff-match-patch>=20241021",
    "pyyaml>=6.0.3,<7.0",
    # System introspection for SystemOptimizerTool (inspect/recommend modes).
    # Cross-platform; ~800KB. Lighter than keeping it as an optional extra
    # because the tool is registered by default and CI needs it to test.
    "psutil>=5.9,<8.0",
    # Transitive pin-up: aiohttp is pulled in via litellm; versions < 3.13.4
    # have 10 CVEs (CVE-2026-34513..34525, CVE-2026-22815). Pin-up ensures CI
    # and consumers get the patched release regardless of litellm's own bound.
    "aiohttp>=3.13.4",
    # python-dotenv CVE-2026-28684 is known (fix in 1.2.2) but litellm pins
    # python-dotenv==1.0.1 strictly, making a pin-up unsatisfiable. CI's
    # pip-audit call suppresses this one CVE via --ignore-vuln below. We'll
    # remove the suppression when litellm relaxes its bound.
    "yfinance>=1.3.0",
    "readability-lxml>=0.8.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
    "pytest-cov>=7.1.0,<8.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "ruff>=0.15.12,<1.0",
    "mypy>=1.20.2,<2.0",
    "types-PyYAML>=6.0,<7.0",
    "hypothesis>=6.152.2,<7.0",
    "pre-commit>=4.5.1,<5.0",
    "pip-audit>=2.10.0,<3.0",
    "bandit>=1.7.0,<2.0",
]
context = [
    "tree-sitter>=0.25.2,<1.0",
    "tree-sitter-language-pack>=0.5.0,<1.0",
    "grep-ast>=0.9.0,<1.0",
]
mcp = [
    "mcp>=1.27.0,<2.0",
]
index = [
    "chromadb>=1.0.0,<2.0",
]

[project.scripts]
godspeed = "godspeed.cli:main"

[project.urls]
Homepage = "https://github.com/omnipotence-eth/godspeed-coding-agent"
Repository = "https://github.com/omnipotence-eth/godspeed-coding-agent"
Issues = "https://github.com/omnipotence-eth/godspeed-coding-agent/issues"
Documentation = "https://github.com/omnipotence-eth/godspeed-coding-agent#readme"
Changelog = "https://github.com/omnipotence-eth/godspeed-coding-agent/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "benchmarks/fixtures/easy-fix-syntax-01/app.py",  # intentional syntax error
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "S",    # flake8-bandit
    "T20",  # flake8-print
]
ignore = ["S603", "S607"]  # subprocess calls are intentional for a coding agent

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "SIM117"]  # assert and hardcoded passwords OK in tests; nested with OK for mocks
"src/godspeed/security/secrets.py" = ["S106"]  # secret_type= is a label, not a password
"scripts/**/*.py" = ["T201"]  # print() is fine in CLI scripts
"experiments/**/*.py" = ["S311", "N818", "SIM103"]  # jitter/naming/style nits in research code
"experiments/**/tests/**/*.py" = ["S101", "S105", "S106", "SLF001", "S311", "N818", "SIM103"]
"benchmarks/fixtures/**/*.py" = [
    "T201",  # print() is intentional in diagnostic scripts
    "S603", "S607", "S102",  # subprocess is intentional in setup/verify hooks
    "S101", "S105", "S108",  # fixture files simulate vulnerable code the agent must fix
    "S113", "S608",
    "E501",
]
"experiments/swebench_lite/**/*.py" = ["T201", "E501"]  # CLI scripts with long log lines

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "real_llm: requires a running Ollama server on localhost:11434 (skipped by default)",
]
addopts = "-m 'not real_llm'"

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["textual.*", "chromadb", "psutil"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/godspeed"]
branch = true
omit = [
    "src/godspeed/tui/*",
    "src/godspeed/cli.py",
    "src/godspeed/__main__.py",
    "src/godspeed/llm/client.py",
    "src/godspeed/context/compaction.py",
    "src/godspeed/agent/system_prompt.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
